--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,14 +77,6 @@ aside {
 footer {
     grid-area: foot;
 }
-
-html {
-    font-family: sans-serif;
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
 body {
     margin: 0;
     font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont,
@@ -95,8 +87,7 @@ body {
     line-height: 1.5;
     color: #212529;
     text-align: left;
-
-    background-color: #1273697a;
+    background-color: #fff;
 }
 
 h1,
@@ -181,16 +172,18 @@ b,
 strong {
     font-weight: bolder;
 }
-
 a {
-    color: #82b4d7;
+    color: #ffc107ee;
     text-decoration: none;
     background-color: transparent;
 }
 
 a:hover {
-    color: #8fb6ce;
+    color: #826f0f;
     text-decoration: none;
+}
+li{
+    list-style: none;
 }
 
 img {
@@ -467,11 +460,12 @@ button::-moz-focus-inner,
     padding: 18px 0px 0px 17px;
     margin-left: 8px;
     margin-right: 8px;
-    background-color: #f3f0ca8a;
+    background-color: #b6ded4;
+    /* background-color: #f3f0ca8a; */
 }
 
 .brand-link {
-    color: #7a6c24;
+    color: #a79c66;
     font-family: Source Sans Pro;
     font-size: 20px;
     line-height: 30px;
@@ -499,8 +493,8 @@ button::-moz-focus-inner,
     text-align: left;
     background-color: #12486B;
     max-width: 260px;
-    min-width: 235px;
-    min-height: 460px;
+    min-width: 227px;
+    min-height: 493px;
     border-left: 1.4px solid #82b4d7;
 }
 
@@ -563,6 +557,9 @@ a.nav-dopdown:active {
 .nav-item {
     padding-bottom: 3px;
 }
+.sing-in{
+    color: #007bff;
+}
 
 .nav-item a p {
     margin: auto;
@@ -583,3 +580,326 @@ a.nav-dopdown:active {
     padding-bottom: 8px;
 }
 
+html,
+body,
+.wrapper {
+    min-height: 100%;
+}
+
+.wrapper {
+    position: relative;
+}
+.wrapper .content-wrapper {
+    min-height: calc(100vh - calc(3.5rem + 1px) - calc(3.5rem + 1px));
+}
+
+.content-wrapper {
+    /* background: #D2E8E3; */
+    min-height: 493px;
+    background: #1273697a;
+}
+
+
+.content-wrapper > .content {
+    padding: 0 0.5rem;
+}
+.content-header {
+    padding: 15px 0.5rem 0px 0.5rem;
+}
+
+.content-header h1 {
+    font-size: 1.8rem;
+    margin: 0;
+}
+.container-fluid {
+    width: 100%;
+    padding-right: 7.5px;
+    padding-left: 7.5px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.navbar-expand > .container,
+.navbar-expand > .container-fluid {
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+}
+.input-group {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    width: 100%;
+}
+
+.input-group > label {
+    margin-bottom: 5px;
+}
+
+.input-group > .form-control {
+    position: relative;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    width: 1%;
+    margin-bottom: 0;
+}
+
+.input-group > .form-control:focus {
+    z-index: 3;
+}
+
+.input-group > .form-control:not(:last-child) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.input-group-append {
+    display: -ms-flexbox;
+    display: flex;
+}
+.input-group-append .btn {
+    position: relative;
+    z-index: 2;
+}
+
+.input-group-append .btn:focus {
+    z-index: 3;
+}
+.input-group-sm > .form-control,
+.input-group-sm > .input-group-append > .btn {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+.input-group
+    > .input-group-append:not(:last-child)
+    > .btn
+    .input-group
+    > .input-group-append:last-child
+    > .btn:not(:last-child):not(.dropdown-toggle) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.input-group > .input-group-append > .btn,
+.input-group > .input-group-prepend:first-child > .btn:not(:first-child) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.form-control-navbar + .input-group-append {
+    margin-left: 0;
+}
+.navbar-light .form-control-navbar + .input-group-append > .btn-navbar {
+    color: rgba(0, 0, 0, 0.6);
+}
+.navbar-light .form-control-navbar:focus,
+.navbar-light .form-control-navbar:focus + .input-group-append .btn-navbar {
+    background-color: #e9ecef;
+    border: 0 !important;
+    color: #2f4c6b;
+}
+.input-group-sm > .form-control:not(textarea) {
+    height: calc(1.8125rem + 2px);
+}
+
+.input-group-sm > .form-control,
+.input-group-sm > .input-group-append > .btn {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #ffffff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+@media (prefers-reduced-motion: reduce) {
+    .form-control {
+        transition: none;
+    }
+}
+
+.form-control::-ms-expand {
+    background-color: transparent;
+    border: 0;
+}
+
+.form-control:focus {
+    color: #495057;
+    background-color: #ffffff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), none;
+}
+
+.form-control::-webkit-input-placeholder {
+    color: #939ba2;
+    opacity: 1;
+}
+
+.form-control::-moz-placeholder {
+    color: #939ba2;
+    opacity: 1;
+}
+
+.form-control:-ms-input-placeholder {
+    color: #939ba2;
+    opacity: 1;
+}
+
+.form-control::-ms-input-placeholder {
+    color: #939ba2;
+    opacity: 1;
+}
+
+.form-control::placeholder {
+    color: #939ba2;
+    opacity: 1;
+}
+
+.form-control:disabled,
+.form-control[readonly] {
+    background-color: #e9ecef;
+    opacity: 1;
+}
+.form-control-navbar {
+    border-right-width: 0;
+}
+
+.form-control-navbar + .input-group-append {
+    margin-left: 0;
+}
+
+.form-control-navbar,
+.btn-navbar {
+    transition: none;
+}
+
+.navbar-light .form-control-navbar,
+.navbar-light .btn-navbar {
+    background-color: #f2f4f6;
+    border: 0;
+}
+
+.navbar-light .form-control-navbar::-webkit-input-placeholder {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-light .form-control-navbar::-moz-placeholder {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-light .form-control-navbar:-ms-input-placeholder {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-light .form-control-navbar::-ms-input-placeholder {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-light .form-control-navbar::placeholder {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-light .form-control-navbar + .input-group-append > .btn-navbar {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.navbar-light .form-control-navbar:focus,
+.navbar-light .form-control-navbar:focus + .input-group-append .btn-navbar {
+    background-color: #e9ecef;
+    border: 0 !important;
+    color: #2f4c6b;
+}
+.btn-trash {
+    border: none;
+    background-color: transparent;
+}
+
+.btn-trash i {
+    color: rgb(197, 40, 72);
+}
+.btn-navbar {
+    background-color: transparent;
+    border-left-width: 0;
+}
+
+.input-form {
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #495057;
+    background-color: #ffffff;
+    border: 1.5px solid #a4ccf5;
+    border-radius: 0.55rem;
+}
+
+.input-form:focus {
+    color: #495057;
+    border: 1.5px solid #80bdff;
+    background-color: #ffffff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), none;
+}
+
+.input-form::placeholder {
+    color: #939ba27f;
+    opacity: 1;
+}
+
+.input-form-none {
+    width: 100%;
+    height: 30px;
+    padding: 4px;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #495057;
+    background-color: #f4f6f9;
+    border: 0px solid #f4f6f9;
+    border-radius: 0.55rem;
+}
+
+.input-form-none:focus {
+    color: #495057;
+    border: 1px solid #f4f6f9;
+    background-color: #f4f6f9;
+    border-color: #f4f6f9;
+    outline: 0;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), none;
+}
+
+.input-form-none::placeholder {
+    color: #939ba253;
+    opacity: 1;
+}
+.btn-primary {
+    color: #fff;
+    background-color: var(--primary);
+    border-color: var(--primary);
+}
+
+.btn-secondary {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+.i-sidebar {
+    padding-right: 0.3rem;
+}
