--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,6 +64,7 @@ header {
 article {
     grid-area: content;
     margin-right: 8px;
+    min-height: 493px;
 }
 
 nav,
@@ -73,6 +74,7 @@ aside {
     padding-left: 8px;
     /* text-align: left; */
     min-height: 100%;
+    /* min-height: 0px; */
 }
 
 footer {
@@ -595,13 +597,14 @@ body,
 }
 .wrapper .content-wrapper {
     min-height: calc(100vh - calc(3.5rem + 1px) - calc(3.5rem + 1px));
+
 }
 
 .content-wrapper {
     /* background: #D2E8E3; */
-    min-height: 493px;
+    /* min-height: 493px; */
 
-    /* min-height: 100%; */
+    min-height: 100%;
     background: #1273697a;
 }
 
