--- a/public/css/style.css
+++ b/public/css/style.css
@@ -912,3 +912,22 @@ body,
 .i-sidebar {
     padding-right: 0.3rem;
 }
+.input-select {
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #495057;
+    background-color: #e8f8f3;
+    border: 1px solid #80d5ff76;
+    border-radius: 0.55rem;
+
+}
+.input-select:focus{
+    color: #495057;
+    border: 2px solid #80bdff;
+    background-color: #e8f8f3;
+    border-color: #80bdff;
+	outline: none;
+}
