--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,6 +78,7 @@ aside {
 footer {
     grid-area: foot;
 }
+
 body {
     margin: 0;
     font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont,
@@ -174,6 +175,7 @@ b,
 strong {
     font-weight: bolder;
 }
+
 a {
     color: #ffc107ee;
     text-decoration: none;
@@ -184,7 +186,8 @@ a:hover {
     color: #826f0f;
     text-decoration: none;
 }
-li{
+
+li {
     list-style: none;
 }
 
@@ -499,7 +502,7 @@ button::-moz-focus-inner,
     max-width: 260px;
     min-width: 227px;
     /* min-height: 493px; */
-    min-height:100%;
+    min-height: 100%;
     padding-bottom: 5rem;
     border-left: 1.4px solid #82b4d7;
 }
@@ -563,7 +566,8 @@ a.nav-dopdown:active {
 .nav-item {
     padding-bottom: 3px;
 }
-.sing-in{
+
+.sing-in {
     color: #007bff;
 }
 
@@ -582,6 +586,7 @@ a.nav-dopdown:active {
 .nav-item div a p {
     margin-left: 8px;
 }
+
 .nav li {
     padding-bottom: 8px;
 }
@@ -595,6 +600,7 @@ body,
 .wrapper {
     position: relative;
 }
+
 .wrapper .content-wrapper {
     min-height: calc(100vh - calc(3.5rem + 1px) - calc(3.5rem + 1px));
 
@@ -609,9 +615,10 @@ body,
 }
 
 
-.content-wrapper > .content {
+.content-wrapper>.content {
     padding: 0 0.5rem;
 }
+
 .content-header {
     padding: 15px 0.5rem 0px 0.5rem;
 }
@@ -620,6 +627,7 @@ body,
     font-size: 1.8rem;
     margin: 0;
 }
+
 .container-fluid {
     width: 100%;
     padding-right: 7.5px;
@@ -627,11 +635,13 @@ body,
     margin-right: auto;
     margin-left: auto;
 }
-.navbar-expand > .container,
-.navbar-expand > .container-fluid {
+
+.navbar-expand>.container,
+.navbar-expand>.container-fluid {
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
 }
+
 .input-group {
     position: relative;
     display: -ms-flexbox;
@@ -643,11 +653,11 @@ body,
     width: 100%;
 }
 
-.input-group > label {
+.input-group>label {
     margin-bottom: 5px;
 }
 
-.input-group > .form-control {
+.input-group>.form-control {
     position: relative;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
@@ -655,11 +665,11 @@ body,
     margin-bottom: 0;
 }
 
-.input-group > .form-control:focus {
+.input-group>.form-control:focus {
     z-index: 3;
 }
 
-.input-group > .form-control:not(:last-child) {
+.input-group>.form-control:not(:last-child) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
@@ -668,6 +678,7 @@ body,
     display: -ms-flexbox;
     display: flex;
 }
+
 .input-group-append .btn {
     position: relative;
     z-index: 2;
@@ -676,50 +687,53 @@ body,
 .input-group-append .btn:focus {
     z-index: 3;
 }
-.input-group-sm > .form-control,
-.input-group-sm > .input-group-append > .btn {
+
+.input-group-sm>.form-control,
+.input-group-sm>.input-group-append>.btn {
     padding: 0.25rem 0.5rem;
     font-size: 0.875rem;
     line-height: 1.5;
     border-radius: 0.2rem;
 }
-.input-group
-    > .input-group-append:not(:last-child)
-    > .btn
-    .input-group
-    > .input-group-append:last-child
-    > .btn:not(:last-child):not(.dropdown-toggle) {
+
+.input-group>.input-group-append:not(:last-child)>.btn .input-group>.input-group-append:last-child>.btn:not(:last-child):not(.dropdown-toggle) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
-.input-group > .input-group-append > .btn,
-.input-group > .input-group-prepend:first-child > .btn:not(:first-child) {
+
+.input-group>.input-group-append>.btn,
+.input-group>.input-group-prepend:first-child>.btn:not(:first-child) {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
-.form-control-navbar + .input-group-append {
+
+.form-control-navbar+.input-group-append {
     margin-left: 0;
 }
-.navbar-light .form-control-navbar + .input-group-append > .btn-navbar {
+
+.navbar-light .form-control-navbar+.input-group-append>.btn-navbar {
     color: rgba(0, 0, 0, 0.6);
 }
+
 .navbar-light .form-control-navbar:focus,
-.navbar-light .form-control-navbar:focus + .input-group-append .btn-navbar {
+.navbar-light .form-control-navbar:focus+.input-group-append .btn-navbar {
     background-color: #e9ecef;
     border: 0 !important;
     color: #2f4c6b;
 }
-.input-group-sm > .form-control:not(textarea) {
+
+.input-group-sm>.form-control:not(textarea) {
     height: calc(1.8125rem + 2px);
 }
 
-.input-group-sm > .form-control,
-.input-group-sm > .input-group-append > .btn {
+.input-group-sm>.form-control,
+.input-group-sm>.input-group-append>.btn {
     padding: 0.25rem 0.5rem;
     font-size: 0.875rem;
     line-height: 1.5;
     border-radius: 0.2rem;
 }
+
 .form-control {
     display: block;
     width: 100%;
@@ -736,6 +750,7 @@ body,
     box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
 @media (prefers-reduced-motion: reduce) {
     .form-control {
         transition: none;
@@ -785,11 +800,12 @@ body,
     background-color: #e9ecef;
     opacity: 1;
 }
+
 .form-control-navbar {
     border-right-width: 0;
 }
 
-.form-control-navbar + .input-group-append {
+.form-control-navbar+.input-group-append {
     margin-left: 0;
 }
 
@@ -824,16 +840,17 @@ body,
     color: rgba(0, 0, 0, 0.6);
 }
 
-.navbar-light .form-control-navbar + .input-group-append > .btn-navbar {
+.navbar-light .form-control-navbar+.input-group-append>.btn-navbar {
     color: rgba(0, 0, 0, 0.6);
 }
 
 .navbar-light .form-control-navbar:focus,
-.navbar-light .form-control-navbar:focus + .input-group-append .btn-navbar {
+.navbar-light .form-control-navbar:focus+.input-group-append .btn-navbar {
     background-color: #e9ecef;
     border: 0 !important;
     color: #2f4c6b;
 }
+
 .btn-trash {
     border: none;
     background-color: transparent;
@@ -842,6 +859,7 @@ body,
 .btn-trash i {
     color: rgb(197, 40, 72);
 }
+
 .btn-navbar {
     background-color: transparent;
     border-left-width: 0;
@@ -898,6 +916,7 @@ body,
     color: #939ba253;
     opacity: 1;
 }
+
 .btn-primary {
     color: #fff;
     background-color: var(--primary);
@@ -909,9 +928,11 @@ body,
     background-color: #6c757d;
     border-color: #6c757d;
 }
+
 .i-sidebar {
     padding-right: 0.3rem;
 }
+
 .input-select {
     width: 100%;
     height: calc(2.25rem + 2px);
@@ -924,10 +945,23 @@ body,
     border-radius: 0.55rem;
 
 }
-.input-select:focus{
+
+.input-select:focus {
     color: #495057;
     border: 2px solid #80bdff;
     background-color: #e8f8f3;
     border-color: #80bdff;
-	outline: none;
+    outline: none;
+}
+
+.phuthu {
+    width: 80px;
+    background-color: #e0f8f1;
+    border:none;
+    /* border-radius: 20%; */
+}
+.phuthu:focus {
+    width: 80px;
+    background-color: #e0f8f1;
+    border:none;
 }
